[package]
name = "codama-renderers-rust-e2e-dummy"
version = "0.0.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
solana-account-view = "2.0"
solana-address = { version = "2.0", features = ["decode"] }
solana-instruction-view = { version = "2.0", features = ["cpi"] }
solana-program-error = "3.0"

[dev-dependencies]
assert_matches = "1.5.0"
