[package]
name = "codama-renderers-rust-e2e-system"
version = "0.0.0"
edition = "2021"

[features]
borsh = ["dep:borsh"]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
borsh = { version = "^0.10", optional = true }
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-account-view = "2.0"
solana-address = { version = "2.0", features = ["decode"] }
solana-instruction-view = { version = "2.0", features = ["cpi"] }
solana-program-error = "3.0"

[dev-dependencies]
assert_matches = "1.5.0"
